fix: adjust spacing and refactor home page for readability

--- a/app/components/_shared/expandable/expandable.module.scss
+++ b/app/components/_shared/expandable/expandable.module.scss
@@ -1,11 +1,17 @@
-@import '@/app/brand';
+@import "@/app/brand";
 
 .expandable {
-
   &__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+    @include media-md {
+      padding-top: 0px;
+      padding-bottom: 0px;
+    }
 
     .toggle {
       transition: transform 0.3s $ease-out-back;
